--- a/style.css
+++ b/style.css
@@ -1,58 +1,123 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
 * {
     padding: 0%;
     margin: 0;
-    font-family: "Merriweather", serif;
+    font-family: "Roboto Condensed", sans-serif;
     box-sizing: border-box;
 }
 
 
-h1 {
-    font-family: "Merriweather", serif;
-    font-weight: 900;
-    font-style: normal;
+body{
+    background-color: #e9edf2;
+    padding: 40px;
 }
-
-h2 {
-    font-family: "Merriweather", serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-h3 {
-    font-family: "Merriweather", serif;
-    font-weight: 600;
-    font-style: normal;
-}
-
-h4 {
-    font-family: "Merriweather", serif;
-    font-weight: 600;
-    font-style: normal;
-}
-
-p {
-    font-family: "Merriweather", serif;
-    font-weight: 300;
-    font-style: normal;
-}
-
-pre {
-    font-family: "Merriweather", serif;
-    font-weight: 200;
-    font-style: normal;
-}
-
 
 a {
     text-decoration: none;
-    color: white;
+    color: #000000;
 }
 
 ul {
     list-style: none;
 }
+
+.navbar{
+    display: flex;
+}
+
+.nav-toggle{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    color: #000000;
+}
+
+.nav-menu{
+    display: none;
+}
+
+i{
+    position: relative;
+    top:5px; 
+}
+
+.nav-items > a {
+    background-color:#f0f1f5;
+    padding: 8px 15px;
+    margin: 5px;
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+#faded{
+    color: #545454;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+a.active, a:hover{
+    background-color: #f5f5f5;
+    color: #000000;
+    font-weight: 600;
+    #faded{
+        color: #000000;
+    }
+}
+
+
+.dropdown .lang{
+    display: flex;
+}
+
+.drop-btn {
+    background: none;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    margin-left: 10rem;
+    cursor: pointer;
+    padding: 10px;
+    font-weight: 600;
+}
+
+.dropdown-content {
+    display: none;
+    text-align: center;
+    position: absolute;
+    cursor: pointer;
+    background-color: #e9edf2;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    background-color: #e9edf2;
+}
+
+
+
+@media (max-width : 800px) {
+    .nav-toggle{
+        flex-wrap: wrap;
+    }
+    
+    .nav-menu{
+        display: block;
+    }
+    .nav-items{
+        display: none;
+        width: 100%;
+        align-items: center;
+    }
+    .lang{
+        display: none;
+    }
+}
+
+/*
 
 header {
     height: 100px;
@@ -78,11 +143,6 @@ ul.nav-toggle {
     border-radius: 50px;
 }
 
-.nav-items.active,
-.nav-items:hover {
-    background-color: #011754;
-    color: #c8c7c7;
-}
 
 .search {
    float: right;
@@ -165,29 +225,4 @@ ul.nav-toggle {
 }
 
 
-/* for dropdown */
-.dropdown {
-    display: inline-block;
-}
-
-.dropbtn {
-    line-height: 30px;
-    border: none;
-    cursor: pointer;
-    background-color: none;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-
+ */
