--- a/style.css
+++ b/style.css
@@ -1,228 +1,143 @@
  @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
-* {
-    padding: 0%;
-    margin: 0;
-    font-family: "Roboto Condensed", sans-serif;
-    box-sizing: border-box;
-}
+ * {
+     padding: 0%;
+     margin: 0;
+     font-family: "Roboto Condensed", sans-serif;
+     box-sizing: border-box;
+ }
 
 
-body{
-    background-color: #e9edf2;
-    padding: 40px;
-}
+ body {
+     background-color: #e4ecf3;
+     padding: 40px;
+     /* background-image: url("/images/background.jpeg");
+    background-repeat: no-repeat;
+    background-position: center; */
 
-a {
-    text-decoration: none;
-    color: #000000;
-}
+ }
 
-ul {
-    list-style: none;
-}
+ a {
+     text-decoration: none;
+     color: #000000;
+ }
 
-.navbar{
-    display: flex;
-}
+ ul {
+     list-style: none;
+ }
 
-.nav-toggle{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    color: #000000;
-}
+ .navbar {
+     display: flex;
+ }
 
-.nav-menu{
-    display: none;
-}
+ .nav-toggle {
+     display: flex;
+     width: 100%;
+     align-items: center;
+     color: #000000;
+ }
 
-i{
-    position: relative;
-    top:5px; 
-}
+ .nav-menu {
+     display: none;
+ }
 
-.nav-items > a {
-    background-color:#f0f1f5;
-    padding: 8px 15px;
-    margin: 5px;
-    border-radius: 40px;
-    cursor: pointer;
-}
+ i {
+     position: relative;
+     top: 5px;
+ }
 
-#faded{
-    color: #545454;
-    font-weight: 400;
-    font-size: 20px;
-}
+ .nav-items>a {
+     background-color: #f0f1f5;
+     padding: 8px 15px;
+     margin: 5px;
+     border-radius: 40px;
+     cursor: pointer;
+ }
 
-a.active, a:hover{
-    background-color: #f5f5f5;
-    color: #000000;
-    font-weight: 600;
-    #faded{
-        color: #000000;
-    }
-}
+ #faded {
+     color: #545454;
+     font-weight: 400;
+     font-size: 20px;
+ }
 
+ a.active,
+ a:hover {
+     background-color: #f5f5f5;
+     color: #000000;
+     font-weight: 600;
 
-.dropdown .lang{
-    display: flex;
-}
-
-.drop-btn {
-    background: none;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    margin-left: 10rem;
-    cursor: pointer;
-    padding: 10px;
-    font-weight: 600;
-}
-
-.dropdown-content {
-    display: none;
-    text-align: center;
-    position: absolute;
-    cursor: pointer;
-    background-color: #e9edf2;
-    min-width: 100px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-    background-color: #e9edf2;
-}
+     #faded {
+         color: #000000;
+     }
+ }
 
 
+ .dropdown .lang {
+     display: flex;
+ }
 
-@media (max-width : 800px) {
-    .nav-toggle{
-        flex-wrap: wrap;
-    }
-    
-    .nav-menu{
-        display: block;
-    }
-    .nav-items{
-        display: none;
-        width: 100%;
-        align-items: center;
-    }
-    .lang{
-        display: none;
-    }
-}
+ .drop-btn {
+     background: none;
+     border: none;
+     outline: none;
+     box-shadow: none;
+     margin-left: 10rem;
+     cursor: pointer;
+     padding: 10px;
+     font-weight: 600;
+ }
 
-/*
+ .dropdown-content {
+     display: none;
+     text-align: center;
+     position: absolute;
+     cursor: pointer;
+     background-color: #e9edf2;
+     min-width: 100px;
+     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+     z-index: 1;
+ }
 
-header {
-    height: 100px;
-    width: 100%;
-    background-color: #f1f1f1;
-}
-
-#logo {
-    display: inline-block;
-}
-
-ul.nav-toggle {
-    float: right;
-    margin-right: 20px;
-}
-
-.nav-items {
-    display: inline-block;
-    margin: 30px;
-    line-height: 30px;
-    background-color: #042582;
-    padding: 10px 20px;
-    border-radius: 50px;
-}
+ .dropdown:hover .dropdown-content {
+     display: block;
+     background-color: #e9edf2;
+ }
 
 
-.search {
-   float: right;
-   margin-top: 20px;
-}
 
-.search input {
-    padding: 10px 20px;
-    border-radius: 5px;
-}
+ @media (max-width : 800px) {
+     .nav-toggle {
+         flex-wrap: wrap;
+     }
 
-.material-symbols-outlined {
-    font-variation-settings:
-        'FILL' 0,
-        'wght' 400,
-        'GRAD' 0,
-        'opsz' 24;
-    font-size: 30px;
-    line-height: 30px;
-}
+     .nav-menu {
+         display: block;
+     }
 
-.srchbtn{
-    background: none;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    margin:10px;
-    cursor: pointer;
-}
+     .nav-items {
+         display: none;
+         width: 100%;
+         align-items: center;
+     }
 
-.toggle{
-    float: right;
-    margin: 30px;
-    color: #011754;
-    cursor: pointer;
-    display: none;
-}
+     .lang {
+         display: none;
+     }
+ }
 
-@media (max-width: 850px) {
-    #logo{
-        margin-right:50px;
-    }
-    .toggle{
-        display: inline-block;
-    }
-    .nav-items{
-        display: block;
-        background-color: none;
-        justify-content: center;
-        color: black;
-    }
-    .nav-toggle{
-        display: block;
-        position: relative;
-        background-color: #042582;
-    }
-}
+ aside {
+     float: right;
+     background-color: #f5f5f5;
+     padding: 13px;
+     width: 30%;
+     border-radius: 30px;
+ }
 
-@media (max-width: 750px) {
-    #logo{
-        margin-right:50px;
-    }
-    .toggle{
-        display: inline-block;
-    }
-    .nav-items{
-        display: block;
-        background-color: none;
-        justify-content: center;
-        color: black;
-    }
-    .nav-toggle{
-        display: block;
-        position: relative;
-        background-color: #042582;
-    }
-    .search{
-        display: block;
-    }
-}
-
-
- */
+ .search>input {
+     padding: 15px;
+     width: 100%;
+     border-radius: 15px;
+     background-color: #e4e4e6;
+     border: none;
+     margin-bottom: 1.5rem;
+ }
