--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@
 
  .nav-menu {
      display: none;
+     cursor: pointer;
+ }
+
+ #check {
+     display: none;
  }
 
  i {
@@ -85,28 +90,6 @@
      cursor: pointer;
      padding: 10px;
      font-weight: 500;
- }
-
- /* navbar for mobile view  */
-
- @media (max-width : 800px) {
-     .nav-toggle {
-         flex-wrap: wrap;
-     }
-
-     .nav-menu {
-         display: block;
-     }
-
-     .nav-items {
-         display: none;
-         width: 100%;
-         align-items: center;
-     }
-
-     .lang {
-         display: none;
-     }
  }
 
  /* side content  */
@@ -290,4 +273,95 @@
 
  .indicator button.active {
      border: #5a5a5a solid;
+ }
+
+ @media (max-width : 1050px) {
+     .nav-toggle {
+         font-size: 15px;
+     }
+
+     .side_content {
+         display: none;
+     }
+
+     .slides {
+         font-size: 20px;
+         width: 27%;
+     }
+
+     .best_of_work {
+         width: 80%;
+         font-size: 2.6rem;
+     }
+ }
+
+ /* navbar for mobile view  */
+
+ @media (max-width : 900px) {
+     /* .nav-toggle {
+         flex-wrap: wrap;
+     } */
+
+     .nav-menu {
+         display: block;
+     }
+
+     .nav-toggle {
+         position: fixed;
+         display: block;
+         width: 100%;
+         text-align: center;
+         background-color: #e4ecf3;
+         top: 80px;
+         left: -100%;
+     }
+
+     .nav-items {
+         display: block;
+     }
+
+     .nav-items>a {
+         font-size: 20px;
+         background: none;
+         line-height: 50px;
+     }
+
+     .a:hover,
+     a.active {
+         background-color: none;
+         color: #000000;
+         font-weight: 600;
+
+         #faded {
+             color: #000000;
+         }
+     }
+
+     #check:checked~.nav-toggle {
+         left: 0;
+     }
+
+     #check:checked~main {
+         display: none;
+     }
+
+     .lang {
+         display: none;
+     }
+
+     .slides {
+         font-size: 17px;
+         width: 23%;
+     }
+ }
+
+ @media (max-width : 550px) {
+     .best_of_work {
+         font-size: 23px;
+         width: 90%;
+     }
+
+     .slides {
+         width: 90%;
+     }
  }
